update org list select
